# rust-battery-management

./: Cargo.toml  README.md  config.toml  day-ahead.json  forecasts.json  makefile  output_plan.json
.github/workflows/: rust.yml
src/: battery.rs  config.rs  forecast.rs  main.rs  planning.rs  prices.rs  tests.rs
