[package]
name = "battery"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "battery"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.5"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
toml = "0.8.19"

[dev-dependencies]
log = "0.4"
tempfile = "3.5"
env_logger = "0.11.5"
